--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bufferutil": "3.0.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -25,7 +26,9 @@
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.27.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "utf-8-validate": "4.0.2",
+    "ws": "5.2.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
